<resources>
    <string name="app_name">Heart Care</string>
    <string name="facebook_app_id">1243430879627194</string>
    <string name="fb_login_protocol_scheme">fb1243430879627194</string>
    <string name="facebook_client_token">b716ebd6a8162a0d7f1de9c7029fe275</string>
    <string name="measure_heart_rate">Measure Heart Rate</string>
    <string name="heart_rate_statistics">Heart Rate Statistics</string>
    <string name="emergency_call">Emergency Call</string>
    <string name="menu_home">Home</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_profile">Profile</string>
    <string name="how_are_u_feeling_today">How are u feeling today?</string>
    <string name="calendar">Calendar</string>
    <string name="todo">Todo</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="create_todo">Todo</string>
    <string name="add_note">Add Note</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="full_name">Full name</string>
    <string name="sex">Sex</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="phone_number">Phone number</string>
    <string name="national_id">National ID</string>
    <string name="address">Address</string>
    <string name="save_modified">Save modified</string>
    <string name="about">About</string>
    <string name="setting">Setting</string>
    <string name="log_out">Log out</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="if_you_cancel_now_all_changes_will_be_lost">If you cancel now, all changes will be lost!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="measure">Measure</string>
    <string name="noFlashWarning">Measurement without flash is less reliable</string>
    <string name="camera_not_found">Camera not available</string>
    <string name="cameraPermissionRequired">Camera permission is required for this application to work.</string>
    <string name="send_output_to">Send output to:</string>
    <string name="output_header_template">Heart rate on %s</string>
    <string name="dateFormat">yyyy-MM-dd\'T\'HH:mm:ssZZZZZ</string>



    <string name="output_detected_peaks_header">Detected Peaks:</string>
    <string name="separator">,</string>
    <string name="row_separator">\n</string>
    <string name="raw_values">Measurements (Timestamp, Value)</string>
    <string name="new_measurement">New Measurement</string>
    <string name="export_result">Export Result</string>
    <string name="export_details">Export Details</string>
    <string name="dateFormatGranular">yyyy-MM-dd\'T\'HH:mm:ss.SSSZZZZZ</string>
    <plurals name="measurement_output_template">
        <item quantity="zero">Pulse: %2.1f\n(%d cycle in %2.1f seconds)</item>
        <item quantity="one">Pulse: %2.1f\n(%d cycle in %2.1f seconds)</item>
        <item quantity="other">Pulse: %2.1f\n(%d cycles in %2.1f seconds)</item>
    </plurals>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_health_record">HealthRecord</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="bpm_statistics">BPM Statistics</string>
    <string name="max">Max</string>
    <string name="avg">Avg</string>
    <string name="min">Min</string>
    <string name="content">Content</string>
    <string name="title">Title:</string>
    <string name="health_record">Health Record</string>
    <string name="average">Average</string>
    <string name="healthy">Healthy</string>
    <string name="maximum">Maximum</string>
    <string name="danger">Danger</string>
    <string name="select_language">Select language</string>
    <string name="welcome">Welcome</string>
    <string name="before_we_enter_make_sure_n_you_have_selected_the_correct_language">Before we enter make sure \n you have selected the correct language</string>
    <string name="english">English</string>
    <string name="confirm">Confirm</string>
    <string name="or">or</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create">Create</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="time">Time</string>
    <string name="heart_rate_measurement_guide">Please place your finger \non the device\'s camera, covering the flash.\nThen click the button to measure.</string>
    <string name="pulse_data">Pulse: 0 \n(0 cycle in 0 second)</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="verify_your_email">Verify Your Email</string>
    <string name="create_new_password">Create New Password</string>
    <string name="please_enter_the_4_digit_code_sent_to">Please Enter The 4 Digit Code Sent To</string>
    <string name="resend_code">Resend Code</string>
    <string name="verify">Verify</string>
    <string name="please_enter_your_email_address_to_nrecieve_a_verification_cord">Please Enter Your Email Address To\nRecieve a Verification Cord.</string>
    <string name="email_address">Email Address</string>
    <string name="send">Send</string>
    <string name="your_new_password_must_be_different_nfrom_previously_used_password">Your New Password Must Be Different\nFrom Previously Used Password</string>
    <string name="new_password">New password</string>
    <string name="notificationResend">Resent verification code</string>
    <string name="logged_in_successfully">Logged in successfully</string>
    <string name="health_consultation">Health Consultation</string>
    <string name="welcome_text_health_consultation">Starting Health Consultation\nwith AI ChatGPT Technology</string>
    <string name="write_here">Write here</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current password</string>
    <string name="change_password_successfully">Change password successfully</string>
    <string name="confirm_password_does_not_match">Confirm password does not match</string>
    <string name="save_modified_successfully">Save modified successfully</string>
    <string name="notifications">Notifications</string>
    <string name="consult_now">Consult Now</string>
    <string name="item_deleted">Item deleted</string>
    <string name="edit_note">Edit note</string>
    <string name="alert">Alert</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="select_gender">Select gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="about_content">Heart Care - Your Heart Rate Monitoring Companion. Track and monitor your heart rate with ease. Stay informed about your heart health and make informed decisions.</string>
    <string name="change_language">Change language</string>
    <string name="are_you_sure_you_want_to_change_language">Are you sure you want to change language?</string>
</resources>