<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_in"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    >

    <ImageView
        android:id="@+id/ic_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_create_new_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_create_new_password"
        app:srcCompat="@drawable/ic_back_1" />

    <TextView
        android:id="@+id/tv_create_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/segoeuib"
        android:text="@string/change_password"
        android:textColor="@color/red"
        android:textFontWeight="500"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ic_create_new_password"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_create_new_password"
        app:srcCompat="@drawable/ic_create_new_password" />

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/segoeui"
        android:gravity="center"
        android:text="@string/your_new_password_must_be_different_nfrom_previously_used_password"
        android:textColor="@color/black"
        android:textFontWeight="700"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_create_new_password" />

    <TextView
        android:id="@+id/tv_current_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/latoblack"
        android:text="@string/current_password"
        android:textColor="@color/light_gray"
        android:textFontWeight="500"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_current_password"
        app:layout_constraintStart_toStartOf="@+id/edit_text_current_password" />

    <EditText
        android:id="@+id/edit_text_current_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:inputType="textPassword"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="0dp"
        android:fontFamily="@font/latoblack"
        android:text="@string/new_password"
        android:textColor="@color/light_gray"
        android:textFontWeight="500"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_new_password"
        app:layout_constraintStart_toStartOf="@+id/edit_text_new_password" />

    <EditText
        android:id="@+id/edit_text_new_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:inputType="textPassword"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_current_password" />

    <TextView
        android:id="@+id/tv_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/latoblack"
        android:text="@string/confirm_password"
        android:textColor="@color/light_gray"
        android:textFontWeight="500"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_confirm_password"
        app:layout_constraintStart_toStartOf="@+id/edit_text_confirm_password" />

    <EditText
        android:id="@+id/edit_text_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:inputType="textPassword"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_new_password" />


    <TextView
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/profile_btn_save_modified"
        android:elevation="7dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textFontWeight="700"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_confirm_password" />

</androidx.constraintlayout.widget.ConstraintLayout>
